# purremu

./: .editorconfig  AGENTS.md  Cargo.toml  LICENSE  README.md
apps/purremu-gb-cli/: Cargo.toml
apps/purremu-gb-cli/src/: main.rs
apps/purremu-gb-desktop/: Cargo.toml
apps/purremu-gb-desktop/src/: main.rs
crates/purremu-gb-core/: Cargo.toml
crates/purremu-gb-core/src/: lib.rs
crates/purremu-gb-core/src/cpu/: cpu_arithmetic.rs  instructions.rs  mod.rs  registers.rs  tests.rs
crates/purremu-gb-core/src/gameboy/: mod.rs  tests.rs
crates/purremu-gb-core/src/joypad/: mod.rs
crates/purremu-gb-core/src/memory_bus/: mod.rs
crates/purremu-gb-core/src/ppu/: mod.rs
crates/purremu-gb-core/src/serial/: mod.rs
docs/: references.md
roms/hello-world/: Cargo.toml  README.md
roms/hello-world/src/: lib.rs  main.rs
