[workspace]
members = [
    "apps/purremu-gb-cli",
    "crates/purremu-gb-core",
    "roms/hello-world",
]
resolver = "3"

[workspace.package]
name = "purremu"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT"
repository = "https://github.com/NekoTapTap/purremu"

[workspace.dependencies]
purremu_gb_core = { path = "crates/purremu-gb-core" }
